k8s/01-basic/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend

  #
  # Whenever k8s decides to create one or more pod for this deployment, it will use the YAML here to form
  # the contents of the pods resource definition YAML.
  #
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pserwylo/cognizant-k8s-pres-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
