k8s/01-basic/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: frontend
